Prevent animated stars from causing overflow and messing with UI

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -40,7 +40,7 @@
 @media only screen and (max-width: 800px) {
   .header-title p {
       padding: 10px 0px 10px 0px;
-      font-size: 0.85em;
+      font-size: 0.75em;
   }
 }
 
