--- a/src/styles/Theme.css
+++ b/src/styles/Theme.css
@@ -1,7 +1,8 @@
 html, body {
     margin: 0;
     padding: 0;
-    width: 100%;
+    width: 100vw;
+    position: relative;
     height: auto;
     overflow-x: hidden;
 };
@@ -9,6 +10,7 @@ html, body {
 .main {
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
   
 .sections {
